Fix logo static path in login template

--- a/students/templates/students/login.html
+++ b/students/templates/students/login.html
@@ -6,7 +6,7 @@
     <div class="login-page">
         <div class="login-card">
             <div style="text-align:center; margin-bottom:15px;">
-                <img src="{% static SCHOOL_LOGO %}" alt="School Logo"
+                <img src="{% static 'students/images/logo.png' %}"
                 style="height:70px; width:auto;">
             </div>
             <h2>Student Login</h2>
